[package]
name = "cgroup-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "lsm1"
path = "src/lsm1/main.rs"

[dependencies]
anyhow = "1.0.66"
ctrlc = "3.2.3"
libbpf-rs = "0.19.1"
libc = "0.2.137"

[build-dependencies]
libbpf-cargo = "0.13.1"
